--- a/breathe.html
+++ b/breathe.html
@@ -24,12 +24,11 @@
         </div>
     </nav>
     <div class='ripple-background'>
-        <div class='circle xxlarge shade1'></div>
-        <div class='circle xlarge shade2'>
-            <div class='circle large shade3'>
-
+        <div class='circle xxlarge shade1'>
+            <div class='circle xlarge shade2'>
+                <div class='circle large shade3'></div>
+                <h1 class="rules"></h1>
             </div>
-            <h1 class="rules"></h1>
         </div>
     </div>
 
